# todo

todo_next_app/: .env  pyproject.toml
todo_next_app/todo_next_app/: main.py  settings.py
